app.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    text-decoration: none;
    border: none;
    outline: none;
    scroll-behavior: smooth;
    font-family:  Verdana, Arial, Helvetica, sans-serif;
}

:root {
    --bg-color: #ffffff;
    --second-bg-color: #f0f7ff;
    --text-color: #000000;
    --main-color: #e43f3f;  
}

.dark-mode {
    --bg-color: #000000;
    --second-bg-color: #262626;
    --text-color: #ffffff;
    --main-color: #94b2bd;
}


html {
    font-size: 62.5%;
    overflow-x: hidden;
    width: 100vw;
}

body {
    background: var(--bg-color);
    color: var(--text-color);
}

.header {
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    padding: 2rem 9%;
    background: var(--bg-color);
    display: flex;
    justify-content: space-between;
    align-items: center;
    z-index: 100;
}

.logo {
    font-size: 2.5rem;
    color: var(--text-color);
    font-weight: 600;
}

.navbar a {
    font-size: 1.7rem;
    color: var(--text-color);
    font-weight: 500;
    margin-left: 3.5rem;
    transition: .3s;
}

.navbar a:hover, .navbar a.active {
    color: var(--main-color);
}

#theme-toggle {
    font-size: 24px; /* Makes the icon larger */
    padding: 10px 15px; /* Increases button size */
    border: 2px solid black;
    border-radius: 8px;
    background-color: white;
    cursor: pointer;
  }
  
  #theme-toggle:hover {
    background-color: #ddd; /* Light hover effect */
  }
  

#menu-icon {
    font-size: 3.6rem;
    color: var(--text-color);
    cursor: pointer;
    display: none;
}

section {
    min-height: 100vh;
    max-height: auto;
    padding: 10rem 9% 2rem;
}

.home {
    display: flex;
    align-items: center;
    padding: 0 9%;
    justify-content: space-between;
}

.my-img { 
    display: flex;
    justify-content: center;
    width: 40rem;
}

.my-img img {
    /* margin: 0 auto; */
    width: 30rem;
    }

.home-content {
    max-width: 60rem;
}

.home-content h1 {
    font-size: 5.6rem;
    font-weight: 700;
    line-height: 1.3;
}

.home-content .text-animate {
    
    font-size: 3.2rem;
}

.home-content .text-animate span {
    font-size: 3.2rem;
    font-weight: 700;
    color: var(--main-color);
    /* -webkit-text-stroke: .7px var(--main-color); */
}

.home-content p {
    font-size: 1.6rem;
    margin: 2rem 0 4rem;
}

.btn-box {
    position: relative;
    display: flex;
    justify-content: space-between;
    width: 34.5rem;
    height: 5rem;
}

.btn-box .btn {
    position: relative;
    display: inline-flex;
    justify-content: center;
    align-items: center;
    width: 15rem;
    height: 100%;
    background: var(--main-color);
    border: .2rem solid var(--main-color);
    border-radius: .8rem;
    font-size: 1.8rem;
    font-weight: 600;
    letter-spacing: .1rem;
    color: var(--bg-color);
    z-index: 1;
    overflow: hidden;
    transition: .5s;
}

.btn-box .btn:hover {
    color: var(--main-color);
} 

.btn-box .btn:nth-child(2) {
    background: transparent;
    color: var(--main-color);
}

.btn-box .btn:nth-child(2):hover {
    color: var(--bg-color);
}

.btn-box .btn:nth-child(2)::before {
    background: var(--main-color);
}

.btn-box .btn::before {
    content: '';;
    position: absolute;
    top: 0;
    left: 0;
    width: 0;
    height: 100%;
    background: var(--bg-color);
    z-index: -1;
    transition: .5s;
}

.btn-box .btn:hover::before {
    width: 100%;
}

.home-sci {
    position: relative;
    bottom: 10rem;
    width: 35rem;
    display:flex;
    justify-content: space-between;
    gap: 1rem;
    /* marginfa-left: 58%; */
    
}

.home-sci a {
    position: relative;
    display: inline-flex;
    justify-content: center;
    align-items: center;
    width: 40px;
    height: 40px;
    background: transparent;
    border: .2rem solid var(--main-color);
    border-radius: 50%;
    font-size: 20px;
    color: var(--main-color);
    z-index: 1;
    overflow: hidden;
    transition: .5s;
}

.home-sci a:hover {
    color: var(--bg-color);
}

.home-sci a::before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 0;
    height: 100%;
    background: var(--main-color);
    z-index: -1;
    transition: .5s;
}

.home-sci a:hover::before {
    width: 100%;
}

.about {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-direction: row;
    gap: 1rem;
    background: var(--second-bg-color);
    padding-bottom: 6rem;
    flex-wrap: wrap;
}
.about-para{
    text-align: left;
}
.line {
    height: 3px;
    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(9, 84, 132), rgba(0, 0, 0, 0));
  }
  
.about-details {
    width: 60%;
}
.about-details h3 {
    margin-top: 5%;
}

.heading {
    font-size: 5rem;
    margin-bottom: 3rem;
    text-align: center;
}

span {
    color: var(--main-color);
}

.about-img {
    position: relative;
    width: 30rem;
    height: 30rem;
    border-radius: 50;
    display: flex;
    justify-content: center;
    align-items: center;
}

.about-img img {
    width: 90%;
    border-radius: 50%;
    border: .2rem solid var(--main-color);
}

.about-img .circle-spin {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%) rotate(0);
    width: 100%;
    height: 100%;
    border-radius: 50%;
    border-top: .2rem solid var(--second-bg-color);
    border-bottom: .2rem solid var(--second-bg-color);
    border-left: .2rem solid var(--main-color);
    border-right: .2rem solid var(--main-color);
    animation: aboutSpinner 8s linear infinite;
}

.about-content {
    text-align: center;
}

.about-content h3 {
    font-size: 2.6rem;
}

.about-content p {
    font-size: 1.6rem;
    margin: 2rem 0 3rem;
}

.btn-box.btns {
    display: inline-block;
    width: 15rem;
    border-radius: .8rem;
}

.btn-box.btns a::before {
    background: var(--second-bg-color);
}
/* ... */

